<resources>
    <string name="app_name">CryptoTracker</string>
    <string name="app_publisher">EVMC Studios</string>
    <string name="app_website">© 2018. All rights reserved</string>
    <string name="app_version">V1.0 - powered by cryptocompare.com</string>
    <string name="app_privacy"><u>Privacy Policy</u></string>
    <string name="app_purl">http://evmcstudios.com/cryptotracker/privacy_policy.html</string>
    <string name="action_about">About</string>

    <!-- PAGES -->
    <string name="app_watchlist">Watch list</string>
    <string name="app_search_coin">Coin list</string>
    <string name="app_details_coin">Coin details</string>
    <string name="app_news">News</string>
    <string name="app_about">About</string>
    <string name="app_privacy_policy">Privacy Policy</string>

    <!-- COIN DETAILS -->
    <string name="coin_name">Coin Name</string>

    <!-- FIELD TEXT -->
    <string name="search_coin">Search coin...</string>
    <string name="portfolio_balance">$0</string>
    <string name="portfolio_title">PORTFOLIO BALANCE</string>

    <!-- ACTIONS -->

    <string name="action_sort">Sort</string>
    <string name="action_search">Search coin...</string>

    <!-- TABS -->

    <string name="quantity">Quantity</string>
    <string name="graphs">Data</string>


    <!-- ADS -->

    <string name="AdMobID">ca-app-pub-9284077315374106~6531377622</string>
    <string name="AdUnitInterstitial">ca-app-pub-9284077315374106/8441077860</string>
    <string name="AdUnitTest">ca-app-pub-3940256099942544/1033173712</string>


</resources>
